--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "KanColle-YPS",
 	"short_name": "KanColle-YPS",
 	"version": "2.1.10.1",
-	"version_name": "v2.1.10.1 春イベント2019後段作戦(仮)",
+	"version_name": "v2.1.10.2 春イベント2019後段作戦(仮2)",
 	"description": "艦これの余所見プレイを支援する(cond_checker改造版)",
 	"homepage_url": "http://hkuno9000.github.io/KanColle-YPS/",
 	"icons": {
