--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 	"manifest_version": 3,
 	"name": "KanColle-YPS",
 	"short_name": "KanColle-YPS",
-	"version": "2.2.0",
-	"version_name": "v2.2.0 https対応版",
+	"version": "2.2.0.1",
+	"version_name": "v2.2.0.1 https対応版 + refine yps-body layout",
 	"description": "艦これの余所見プレイを支援する(cond_checker改造版)",
 	"homepage_url": "http://hkuno9000.github.io/KanColle-YPS/",
 	"icons": {
