--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 	"manifest_version": 3,
 	"name": "KanColle-YPS",
 	"short_name": "KanColle-YPS",
-	"version": "2.2.0.1",
-	"version_name": "v2.2.0.2 https対応版 + refine yps-body layout, home-url",
+	"version": "2.2.1",
+	"version_name": "v2.2.1 https対応、配置調整版",
 	"description": "艦これの余所見プレイを支援する(cond_checker改造版)",
 	"homepage_url": "https://hkuno9000.github.io/KanColle-YPS/",
 	"icons": {
