Feat: #203 remove &gl=xxxx... from outer-URL
yps-navi領域に配置している外部リンクに対して,
Google アナリティクス 4 (GA4) の連携用の識別子 "&_gl=xxxxx..." が自動追加されるので,
Aタグのデフォルト動作をonclickで自前で外部リンクに飛ぶように修正した.

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 	"manifest_version": 3,
 	"name": "KanColle-YPS",
 	"short_name": "KanColle-YPS",
-	"version": "2.2.3",
-	"version_name": "v2.2.3: 2025秋イベント後段対応",
+	"version": "2.2.3.1",
+	"version_name": "v2.2.3.1: feat #203",
 	"description": "艦これの余所見プレイを支援する(cond_checker改造版)",
 	"homepage_url": "https://hkuno9000.github.io/KanColle-YPS/",
 	"icons": {
